Página atualizada à partir do GitHub

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Bem vindo ao GIT</title>
 </head>
 <body>
-    
+    <h1>Página atualizada à partir do GitHub na branch MAIN</h1>
 </body>
 </html>
