Update do HEAD no MASTER

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Bem vindo ao GIT</title>
 </head>
 <body>
-    <h1>Título 1</h1>
-
-    <h2>Título 2</h2>
+    <h1>Página atualizada à partir do GitHub na branch MAIN</h1>
 </body>
 </html>
